--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "chalk": "2.4.2",
     "connect": "3.6.6",
     "eslint-plugin-vue": "5.2.2",
+    "fuse.js": "^3.4.4",
     "html-webpack-plugin": "3.2.0",
     "mockjs": "1.0.1-beta3",
     "node-sass": "^4.9.0",
     "runjs": "^4.3.2",
     "sass-loader": "^7.1.0",
+    "screenfull": "^4.2.0",
     "script-ext-html-webpack-plugin": "2.1.3",
     "serve-static": "^1.13.2",
     "svg-sprite-loader": "4.1.3",
